--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
+    "wolfram-alpha-api": "https://products.wolframalpha.com/api/libraries/javascript/wolfram-alpha-api-1.0.0-rc.1.tgz",
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
